<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_bitcoin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bitcoin"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/text_last_offer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_bitcoin"
        android:layout_marginRight="5dp"
        android:text="@string/last_offer"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_last_offer_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_bitcoin"
        android:layout_toEndOf="@id/text_last_offer"
        android:layout_toRightOf="@id/text_last_offer"
        android:text="123"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/text_lowest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_last_offer"
        android:layout_marginRight="5dp"
        android:text="@string/lowest_price"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_lowest_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_last_offer"
        android:layout_toEndOf="@id/text_lowest"
        android:layout_toRightOf="@id/text_lowest"
        android:text="123"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_highest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_lowest_price"
        android:layout_marginRight="5dp"
        android:text="@string/highest_price"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_highest_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_lowest"
        android:layout_toEndOf="@id/text_highest"
        android:layout_toRightOf="@id/text_highest"
        android:text="123"
        android:textSize="20sp" />

    <View
        android:id="@+id/view_red_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/text_highest"
        android:layout_marginTop="15dp"
        android:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/label_total_investido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_red_line"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/total_investido"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_total_investido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_red_line"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/label_total_investido"
        android:layout_toRightOf="@id/label_total_investido"
        android:text="123"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/label_total_bitcoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_total_investido"
        android:layout_marginRight="5dp"
        android:text="@string/total_de_bitcoin"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_total_bitcoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_total_investido"
        android:layout_toEndOf="@id/label_total_bitcoin"
        android:layout_toRightOf="@id/label_total_bitcoin"
        android:text="123"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/label_total_reais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_total_bitcoin"
        android:layout_marginRight="5dp"
        android:text="@string/total_em_reais"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_total_reais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_total_bitcoin"
        android:layout_toEndOf="@id/label_total_reais"
        android:layout_toRightOf="@id/label_total_reais"
        android:text="123"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/label_lucro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_total_reais"
        android:text="@string/lucro"
        android:layout_marginRight="5dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_lucro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_total_reais"
        android:layout_toEndOf="@id/label_lucro"
        android:layout_toRightOf="@id/label_lucro"
        android:text="123"
        android:textSize="20sp" />


</RelativeLayout>